[gd_scene load_steps=2 format=3 uid="uid://c3xq7fy0vl5mm"]

[ext_resource type="Script" path="res://src/ui/evidence_slot.gd" id="1_slot"]

[node name="EvidenceSlot" type="Control"]
custom_minimum_size = Vector2(120, 80)
layout_mode = 3
anchors_preset = 0
script = ExtResource("1_slot")

[node name="Background" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="Border" type="Panel" parent="."]
unique_name_in_owner = true
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="VBox" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
theme_override_constants/separation = 4

[node name="Icon" type="TextureRect" parent="VBox"]
unique_name_in_owner = true
custom_minimum_size = Vector2(32, 32)
layout_mode = 2
size_flags_horizontal = 4
expand_mode = 2
stretch_mode = 5

[node name="EvidenceName" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
text = "Evidence Name"
horizontal_alignment = 1

[node name="StatusLabel" type="Label" parent="VBox"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 4
theme_override_font_sizes/font_size = 12
text = "---"
horizontal_alignment = 1

[node name="SlotButton" type="Button" parent="."]
unique_name_in_owner = true
modulate = Color(1, 1, 1, 0)
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
flat = true
